--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
-    "express-jwt": "^5.3.0"
+    "express-graphql": "^0.6.11",
+    "express-jwt": "^5.3.0",
+    "graphql": "^0.11.7"
   }
 }
