--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.4",
     "express-graphql": "^0.6.11",
     "express-jwt": "^5.3.0",
-    "graphql": "^0.11.7"
+    "graphql": "^0.11.7",
+    "uuid": "^3.2.1"
   }
 }
