--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.203.0",
+    "aws-serverless-express": "^3.1.3",
     "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
     "express": "^4.15.4",
     "express-graphql": "^0.6.11",
-    "express-jwt": "^5.3.0",
     "graphql": "^0.11.7",
     "uuid": "^3.2.1"
   }
